modify var.sass, profile friend hover, fix login.page title color

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -2,8 +2,6 @@
 /*nav_bar
 /********
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
-
 *
   margin: 0
   padding: 0
@@ -58,7 +56,7 @@ a
 
     /*top: 0px;
     line-height: 4vw
-    color: var(--fontcolor-navbarbuttons)
+    color: var(--fontcolor-main)
     margin-left: 3%
 
 /*button
