--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
+
 \:root
   
   //基本顏色 （數字大 淺
@@ -9,29 +11,35 @@
   --green-2: #9FE4D4
   --green-3: #C4EFE5
   
+  --black-1: #333333
+  --black-2: #4F4F4F
+  --black-3: #828282
+  --black-4: #BDBDBD
+  --black-5: #E0E0E0
+    
   --blue: #6FD6F8
   --yellow: #F9D567
-  --red: F87171
-  --ricewhite: FFFCF1
+  --red: #F87171
+  --ricewhite: #FFFCF1
 
 
   //gobal
 
-  --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
+  --font-family-header: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
   --font-style-header: normal
-  --font-family-text: "Noto Sans TC", "Tahoma", "Arial"
+  --font-family-text: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
   --font-style-text: normal
-  --font-family-card: "Noto Sans TC", "Tahoma", "Arial"
+  --font-family-card: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
 
-  --fontcolor-reverse: #000000
-  --fontcolor-main:  #000000
-  --fontcolor-second: #828282
+  --fontcolor-reverse: var(--black-1)
+  --fontcolor-main:  var(--black-1)
+  --fontcolor-second: var(--black-3)
   --fontcolor-third: #4F4F4F
 
   --fontcolor-placeholder: #B9B9B9
   --fontcolor-placeholder-hover: #EFFFFB
 
-  --background-color: #FFFCF1 //#FFF6ED
+  --background-color: white //#FFFCF1 //#FFF6ED
   --background-color-navbar: #FFAD94
   --background-color-userpic: #FFFFFF
 
