connect join window with backend

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -762,6 +762,12 @@ footer
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+        #requirement-tags
+          width: 100%
+          display: flex
+          flex-direction: row
+          justify-content: space-around
+
       #eventjoinability 
         border-radius: 1rem
         background-color: #F2F2F2
