--- a/templates/profile_edit.pug
+++ b/templates/profile_edit.pug
@@ -157,8 +157,11 @@ html
               {% empty %}
               p 快去建立連結吧
               {% endfor %}
-              .vitualimg
-              .vitualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
             //-
               hr#divider1.lefthr
               p 個性
