add join condition checking

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -611,6 +611,17 @@ footer
           padding: 0.5rem 1rem
           font-size: 1rem
           cursor: pointer
+        .eventedit-btn
+          //position: absolute
+          right: 0
+          //transform: translateX(3.5rem)
+          outline: none
+          border: none
+          border-radius: 3rem
+          background-color: var(--border-color-eventwindow)
+          padding: 0.5rem 1rem
+          font-size: 1rem
+          cursor: pointer
       
   
   #eventwindow-right
