rm steven from aboutus, add log in aboutus

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -312,7 +312,10 @@ footer
                 flex-wrap: nowrap
                 justify-content: flex-start;
                 align-items: center
-                margin: 0.6rem 0.5rem
+                margin: 0.5rem
+                p
+                  padding: 0.5rem
+                  margin: 0
 
                 #cmtfrom
                   background-color: var(--background-color-navbar)
