--- a/templates/profile_edit.pug
+++ b/templates/profile_edit.pug
@@ -353,3 +353,4 @@ html
     script(src="{% static 'js/semantic.min.js")
     script(src="{% static 'js/profile.js' %}")
     script(src="{% static 'js/profile_edit.js' %}")
+    script(src="{% static 'js/navbar.js' %}")
