--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -80,7 +80,41 @@ a
 
 #gap3
   width: 100%
-  height: 3vh
+  height: 50vh
+  
+.logs
+  width: 50%
+  display: flex
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: center;
+  align-items: flex-start;
+  
+  .top
+    width: 100%
+    display: flex
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem
+    
+    .version
+      font-weight: 500
+      font-size: 1rem
+      color: var(--black-3)
+    .date
+      font-weight: 700
+      font-size: 0.7rem
+      color: var(--black-3)
+  .description
+    font-weight: 500
+    font-size: 1rem
+    color: var(--black-4)
+    margin-left: 1rem
+  
 
 #img-cards
   position: absolute
