add requirements to homepage event window

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -173,6 +173,9 @@ html
               #event-heading
                 #event-title
                 #event-subtitle
+                #event-require
+                  //ajax append #requiretag
+                    #requiretag
               #date
                 p#event-date 活動日期
                 p#due-date 報名截止
