--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -412,15 +412,29 @@ footer
         #event-heading 
           display: flex
           flex-direction: column
-          width: calc(10 * 1.8rem)
+          width: calc(11 * 1.5rem)
           margin-left: 0.7rem
           #event-title
-            font-size: 1.8rem
+            font-size: 1.5rem
             //width: 50rem
           #event-subtitle
             font-size: 1rem
             color: var(--fontcolor-third)
-            //margin: 0.3rem 0 0 9rem                  
+            margin: 0 0 0 0.2rem
+          #event-require
+            display: flex
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-content: flex-start;
+            justify-content: flex-start;
+            align-items: flex-start;
+            margin-top: 0.2rem
+            #requiretag
+              background-color: white
+              border-radius: 0.6rem
+              padding: 0rem 0.4rem
+              margin-right: 0.3rem
+              font-size: 0.85rem
         #date
           display: flex
           flex-direction: column;
@@ -440,7 +454,7 @@ footer
             width: 100%
       
       #event-detail
-        font-size: 1.1rem
+        font-size: 1rem
         line-height: 1.5rem
         min-height: 5rem
         max-height: 14rem
@@ -462,13 +476,13 @@ footer
       justify-content: flex-start
       box-shadow: inset 0px -1px 5px var(--boxshadow-color)
       
-      width: 98%
+      width: 95%
       max-height: 15rem
       min-height: 10rem
       background-color: var(--background-color-eventwindow-board)
       border-radius: 1.5rem
       padding: 0.5rem
-      margin: 0.5rem 0 0 0
+      margin-left: 0.5rem
       
       #msgtitle
         //position: absolute
@@ -534,7 +548,8 @@ footer
               #eventmsg-sendername
                 font-size: 1.05rem
                 width: 4rem
-                font-weight: 900
+                font-weight: 700
+                color: var(--black-2)
               #event-date
                 font-size: 0.7rem
                 width: 15rem
