adjusted go to top button size / deleted footer bottom padding

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -41,7 +41,7 @@ footer
   align-items: center
   flex-wrap: nowrap
   //left: -50%
-  padding-bottom: 1vh
+  //padding-bottom: 1vh
   width: 100%
   p
     font-size: 1vw
