--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -10,6 +10,7 @@ html
     link(href="{% sass_src 'sass/homepage.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
+    link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
     script(src="{% static 'js/jquery.min.js' %}")
     script(src="{% static 'js/d3.v5.js' %}")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
@@ -162,139 +163,7 @@ html
       {% include "footer.pug" %}
       
     .event-detail
-      #eventwindow
-        #eventwindow-left
-          #description
-            #description-top
-              #eventwindow-bg
-                #eventpic
-                  img.pic
-                  p 目前沒有圖片
-              #event-heading
-                #event-title
-                #event-subtitle
-                #event-require
-                  //ajax append #requiretag
-                    #requiretag
-              #date
-                p#event-date 活動日期
-                p#due-date 報名截止
-            
-            #event-detail {{ event_detail.detail }}
-          #eventmsgregion
-            p#msgtitle 留言板
-            #eventmsg-board
-              //-
-                .eventmsg#eventmsg(style="display: none")
-                  a
-                    img.sender
-                  #eventmsg-right
-                    #eventmsg-righttop
-                      a#eventmsg-sendername
-                      p#event-date
-                    #eventmsg-rightbottom
-                      p#eventmsgtext
-
-          #eventmsg-sender
-            {% if request.user.is_authenticated %}
-            a(href="{% url 'profile' id=request.user.userextend.pk %}")
-              img#senderpic(src="{{ request.user.userextend.img.url }}")
-            {% else %}
-            img#senderpic
-            {% endif %}
-            {% if request.user.is_authenticated %}
-            .comment-operate-region
-              input.eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
-              input.eventmsg-btn(type="button", value="送出")
-              input.eventjoin-btn(type="button", value="申請加入")
-              input.eventedit-btn(type="button", value="編輯活動", style="display: none")
-              script.
-                $(document).ready(function(){
-                  $(".eventmsg-btn").on("click", function() {
-                    message_handler(
-                      'comment/' + $(this).closest('#eventwindow').attr('class'),
-                      $(this).closest('#eventwindow').attr('class'), 
-                      "{{ csrf_token }}");
-                  })
-                })
-            {% else %}
-            a.comment-operate-region(href="{% url 'login' %}")
-              input.eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
-              input.eventmsg-btn(type="submit", value="送出")
-              input.eventjoin-btn(type="button", value="加入團隊")
-            {% endif %}
-            
-        #eventwindow-right
-          #joinevent-btn
-          
-          #eventoperate
-            a
-              img#exitbtn1(src="{% static 'file/exiticon.png' %}")
-              
-            a#organizer-link(href="#")
-              img#organizer-pic.member(src='{{ event_detail.host.img.url }}')
-            #bar
-            #member
-              
-              //-
-                {% for participant in event_detail.participants.all %}
-                a(href="{% url 'profile' id=participant.pk %}")
-                  img.member.participant(src='{{ participant.img.url }}')
-                {% endfor %}
-  
-                {% for interested_user in event_detail.likes.all %}
-                a(href="{% url 'profile' id=interested_user.pk %}")
-                  img.member.interested(src='{{ interested_user.img.url }}')
-                {% endfor %}
-              
-            {% if request.user.is_authenticated %}
-            
-            {% if event_detail in request.user.userextend.event_like.all %}
-            #likebutton(style="background-image: url('/static/file/like-bg-y.png')")
-              button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
-                span#like-img
-            {% else %}
-            #likebutton(style="background-image: url('/static/file/like-bg-n.png')")
-              button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
-                span#like-img
-            {% endif %}
-            script.
-              $(document).ready(function(){
-                $("#likebutton").on("click", function() {
-                  like_handler('like/' + $(this).closest('#eventwindow').attr('class'), $(this).closest('#eventwindow').attr('class'), "{{ csrf_token }}");
-                })
-              })
-            // user not authenticated
-            {% else %}
-            a.login-redirect(href="{% url 'login' %}")
-            #likebutton(style="background-image: url('/static/file/like-bg-n.png')", href="{% url 'login' %}")
-              form(action="", method="POST")
-                button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
-            {% endif %}
-
-        #eventjoinwindow 
-          img#exitbtn3(src="{% static 'file/exiticon.png' %}")
-          #eventjoincontainer
-            
-            p#eventjoinhead 申請加入
-            form
-              #requirement-tags
-              //- textarea(type='text',placeholder='具備能力')
-              textarea#reason(type='text',placeholder='*加入理由')
-            input.eventjoinbtn(type="button", value="加入")
-            script.
-              $(document).ready(function(){
-                $("input.eventjoinbtn").on("click", function() {
-                  console.log("clicked")
-                  join_event_handler(
-                    "{% url 'join_event' %}",
-                    "{{ csrf_token }}",
-                    $(this).closest('#eventwindow').attr('class')
-                  )
-                })
-              })
-
-      #filter1
+      {% include "eventwindow.pug" %}
         
       
     script(src="{% static 'js/jquery-3.2.1.min.js' %}")
@@ -302,3 +171,4 @@ html
     script(src="{% static 'js/semantic.min.js' %}")
     script(src="{% static 'js/homepage.js' %}")
     script(src="{% static 'js/navbar.js' %}")
+    script(src="{% static 'js/eventwindow.js' %}")
