--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -511,6 +511,24 @@ footer
       color: #AAA
       font-size: 1rem
       margin-left: 1rem
+    #requirements
+      display: flex
+      flex-direction: row
+      background-color: white
+      border-radius: 1rem
+      margin-bottom: 0.7rem
+      height: 2rem
+      p
+        margin-right: 0.7rem
+        background-color: var(--background-color-input)
+        border-radius: 1rem
+        padding: 0.5rem
+        text-align: center
+    #add-requirement-btn
+        background-color: var(--background-color-input)
+        border-radius: 1rem
+        width: 1rem
+        text-align: center
     
     #id_title
       height: 2.5rem
