fix profile eventwindow ajax data, but like&comment couldn't work yet

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -267,7 +267,7 @@ footer
             background-color: var(--background-color-event)
             border-radius: 1rem
             z-index: 4
-            width: 13rem
+            width: 15.5rem
             height: auto
             //margin: 1rem
             padding: 0.7rem
@@ -646,6 +646,7 @@ footer
             border-color: var(--border-color-frame)
             border-radius: 1rem
             background-color: var(--background-color-event)
+            cursor: pointer
             #nopicalert
               width: 12vw
               text-align: center
@@ -737,7 +738,7 @@ footer
               font-size: 0.9rem
               margin: 0.5rem 0 0.5rem 0.8rem
               font-weight: 400
-            .eventmsg
+            .eventcomment
               display: flex
               flex-direction: row
               flex-wrap: nowrap
@@ -756,7 +757,7 @@ footer
                 border-radius: 50%
                 background-color: var(--background-color-input)
               
-              #eventmsg-right
+              #eventcomment-right
                 display: flex
                 flex-direction: column
                 flex-wrap: nowrap
@@ -767,7 +768,7 @@ footer
                 margin-left: 0.7rem
                 
                 
-                #eventmsg-righttop
+                #eventcomment-righttop
                   display: flex
                   flex-direction: row
                   flex-wrap: nowrap
@@ -777,7 +778,7 @@ footer
                   width: 100%
                   
                   
-                  #eventmsg-sendername
+                  #eventcomment-sendername
                     font-size: 1.05rem
                     width: 4rem
                     font-weight: 500
@@ -787,7 +788,7 @@ footer
                     color: var(--fontcolor-second)
                     text-align: right
                     
-                #eventmsgtext
+                #eventcommenttext
                   font-size: 1rem
                   color: #595959
 
