--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -16,7 +16,7 @@
   top: 0
   left: 0
   width: 100%
-  height: 4vw
+  height: 3.5rem
   background-color: var(--background-color-navbar)
 
   /*UpLeft/UR/DR/DL
@@ -52,10 +52,10 @@ a
     font-family: var(--font-family-header)
     font-style: var(--font-style-header)
     font-weight: 400
-    font-size: 2.7vw
+    font-size: 2.7rem
 
     /*top: 0px;
-    line-height: 4vw
+    line-height: 2.5rem
     color: var(--fontcolor-main)
     margin-left: 3%
 
@@ -64,12 +64,12 @@ a
   form
     position: relative
     input
-      height: 2.5vw
-      width: 25vw
+      height: 2.2rem
+      width: 30vw
       border-radius: 1rem
       border: none
       outline: none
-      margin-top: 0.75rem
+      margin-top: 0.25rem
       background-color: var(--background-color-searchbar)
       padding-left: 1rem
     
@@ -87,7 +87,7 @@ a
   li
     display: block
     float: right
-    width: 1.5rem
+    width: 1.5vw
     height: 1.5rem
 
     white-space: nowrap
