--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -106,7 +106,7 @@ a
       display: inline-block
       overflow: hidden
       background-repeat: no-repeat
-      backgroundgit -position: center center;
+      background-position: center center;
       background-size: contain
       
     .button:hover
