--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -118,7 +118,7 @@ html
 
       #eventjoinwindow
         img#exitbtn3(src="{% static 'file/exiticon.png' %}")
-        #eventjoincontainer
+        .eventcontainer
           
           p#eventjoinhead 申請加入
           form
@@ -137,3 +137,7 @@ html
                 )
               })
             })
+      #eventcontrol
+        img#exitbtn4(src="{% static 'file/exiticon.png' %}")
+        .eventcontainer
+          
