--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -116,8 +116,11 @@ html
           script.
             $('#eventboard a').on("click", function() {
               $('#eventwindow').attr('class', this.id)
-              console.log("event/" + this.id)
-              event_handler("event/" + this.id, "{{ request.user.id }}", "{{ csrf_token }}");
+              event_handler(
+                "/event/" + this.id, 
+                "{{ request.user.id }}", 
+                "{{ csrf_token }}"
+              );
             });
           
           #virtualdiv
