--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -122,9 +122,10 @@ html
           
           p#eventjoinhead 申請加入
           form
-            #requirement-tags
-            //- textarea(type='text',placeholder='具備能力')
-            textarea#reason(type='text',placeholder='*加入理由')
+            #requirement-pane
+              p#requirement-text 具備的能力
+              #requirement-tags
+            textarea#reason(type='text', placeholder='* 加入理由')
           input.eventjoinbtn(type="button", value="加入")
           script.
             $(document).ready(function(){
