makes eventcreatewindow requiretag can be modified

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -78,7 +78,8 @@
         #event-heading
           display: flex
           flex-direction: column
-          width: calc(11 * 1.5rem)
+          width: 20vw
+          min-width: calc(11 * 1.5rem)
           margin-left: 0.7rem
           #event-title
             font-size: 1.5rem
