--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -36,7 +36,7 @@
   --fontcolor-second: var(--black-3)
   --fontcolor-third: #4F4F4F
 
-  --fontcolor-placeholder: #B9B9B9
+  --fontcolor-placeholder: #777777
   --fontcolor-placeholder-hover: #EFFFFB
 
   --background-color: white //#FFFCF1 //#FFF6ED
