--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -387,7 +387,7 @@ footer
   //display: none
   position: fixed
   transform: translate(-50%, -50%)
-  top: 55%
+  top: 50%
   left: 50%
   width: 40%
   padding: 3% 0
@@ -498,7 +498,7 @@ footer
     
     select
       background-color: var(--background-color-input)
-      color: #888 //var(--fontcolor-placeholder)
+      color: var(--fontcolor-placeholder) //var(--fontcolor-placeholder)
       height: 2rem
       font-size: 1rem
       border-radius: 1rem
@@ -514,16 +514,38 @@ footer
     #requirements
       display: flex
       flex-direction: row
+      flex-wrap: wrap;
+      align-content: flex-start;
+      justify-content: flex-start;
       background-color: white
       border-radius: 1rem
       margin-bottom: 0.7rem
-      height: 2rem
-      p
+      height: 5rem
+      color: var(--fontcolor-placeholder)
+      
+      overflow-x: scroll
+      overflow-y: visible
+      #requiretitle
+        border-radius: 1rem
+        text-align: center
+        font-size: 1rem
+        line-height: 2rem
+        margin-bottom: 0.4rem;
+        height: 2rem;
+        padding: 0 0.7rem
+      input
         margin-right: 0.7rem
         background-color: var(--background-color-input)
         border-radius: 1rem
-        padding: 0.5rem
         text-align: center
+        font-size: 1rem
+        line-height: 2rem
+        margin-bottom: 0.4rem;
+        height: 2rem;
+        border: none
+        outline: none
+        padding: 0 0.7rem
+        
     #add-requirement-btn
         background-color: var(--background-color-input)
         border-radius: 1rem
