rm event_detail url, add event likes&parti subwindow

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -418,7 +418,7 @@
           display: block
           //width: 70%
   
-  #eventjoinwindow
+  .eventsubwindow
     position: absolute
     display: none
     transform: translate(-50%, 0)
@@ -434,15 +434,17 @@
     border-radius: 1rem 1rem 3rem 3rem
     box-shadow: 10px 10px 25px 5px var(--boxshadow-color)
     opacity: 0
-
-    #exitbtn3
+    
+    .exitbtn
       width: 1.5rem
       height: 1.5rem
       cursor: pointer
       position: absolute
       right: 1.5rem
       top: 1.5rem
-
+  
+  #eventjoinwindow
+    #exitbtn3
     .eventcontainer
       display: flex
       flex-direction: column
@@ -523,20 +525,6 @@
         border: none
       
   #eventcontrol
-    position: absolute
-    display: none
-    transform: translate(-50%, 0)
-    //top: 65%
-    bottom: 0
-    left: 50%
-    width: 100%
-    min-width: 35rem
-    //height: 75%
-    height: 0
-    background-color: red //var(--background-color-container)
-    z-index: 1
-    border-radius: 1rem 1rem 3rem 3rem
-    box-shadow: 10px 10px 25px 5px var(--boxshadow-color)
   
 
 #filter1
